# DigitalPy

./: .flakeheaven_baseline  .gitignore  CorePackages.md  CoreServices.md  README.md  Services.md  action_key.py  action_mapper.py  application_event.py  config_action_key_provider.py  configuration.py  controller.py  controller_message.py  default_action_mapper.py  default_event_manager.py  default_factory.py  default_persistent_object.py  default_request.py  event.py  event_manager.py  factory.py  inifile_configuration.py  node.py  null_mapper.py  object_factory.py  object_id.py  persistent_object.py  persistent_object_proxy.py  pyproject.toml  request.py  response.py  setup.py  sonar-project.properties  tox.ini  value_change_event.py  zmanager.md
.github/workflows/: build.yml  codeql.yml  pylint.yml  python-publish-public.yml  python-publish.yml  wemake.yml
config/: action_key_provider.py
config/impl/: config_action_key_provider.py  inifile_configuration.py
configuration/: Emergency-rdfs.xml  Emergency.xsd  emergency.json
core/: event_manager.py  object_factory.py
emergency_RI/: config.ini  constants.py
examples/filmology_app/: README.md  main.py  pyproject.toml
examples/filmology_app/blueprints/: FilmologyManagement_blueprint.py
examples/filmology_app/components/FilmologyManagement/: FilmologyManagement_facade.py
examples/filmology_app/components/FilmologyManagement/base/: FilmologyManagement_action_mapper.py  FilmologyManagement_domain.py  __init__.py
examples/filmology_app/components/FilmologyManagement/configuration/: FilmologyManagement-OAS.yaml  FilmologyManagement_constants.py  FilmologyManagement_flows.ini  external_action_mapping.ini  logging.conf  manifest.ini
examples/filmology_app/components/FilmologyManagement/configuration/model_definitions/: Actor.json  Date.json  Director.json  Genre.json  Language.json  Movie.json  Poster.json
examples/filmology_app/components/FilmologyManagement/controllers/: FilmologyManagement_controller.py  FilmologyManagement_persistence_controller.py
examples/filmology_app/components/FilmologyManagement/controllers/directors/: date_director.py  movie_director.py
examples/filmology_app/components/FilmologyManagement/domain/builder/: actor_builder.py  date_builder.py  director_builder.py  entitybase_builder.py  entitybaseextended_builder.py  error_builder.py  genre_builder.py  image_builder.py  language_builder.py  movie_builder.py  person_builder.py  poster_builder.py
examples/filmology_app/components/FilmologyManagement/domain/model/: actor.py  date.py  director.py  entitybase.py  entitybaseextended.py  genre.py  image.py  language.py  movie.py  person.py  poster.py
examples/filmology_app/components/FilmologyManagement/persistence/: FilmologyManagement_base.py  actor.py  date.py  director.py  entitybase.py  entitybaseextended.py  error.py  genre.py  image.py  language.py  movie.py  person.py  poster.py
examples/filmology_app/configuration/: application_configuration.ini  object_configuration.ini
examples/filmology_app/tests/: test_filmology_facade.py
filmology_app/: __init__.py
model/: __init__.py  _detail.py  _event.py  application_event.py  object_id.py
routing/: action_mapper.py  controller.py  controller_message.py  request.py
(+757 files in other folders)
