[tool.poetry]
name = "filmology-app"
version = "0.1.0"
description = "An demo application for filmology consisting of all potential relationships"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.3.4"
digitalpy = {path = "../..", develop = true}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
